优化：restkeeper-model-shop,restkeeper-model-trading

--- a/restkeeper-model-security/model-security-producer/pom.xml
+++ b/restkeeper-model-security/model-security-producer/pom.xml
@@ -21,6 +21,11 @@
 
         <dependency>
             <groupId>com.itheima.restkeeper</groupId>
+            <artifactId>model-basic-interface</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.itheima.restkeeper</groupId>
             <artifactId>model-security-service</artifactId>
         </dependency>
 
