--- a/restkeeper-model-shop/model-shop-user/pom.xml
+++ b/restkeeper-model-shop/model-shop-user/pom.xml
@@ -30,6 +30,11 @@
             <artifactId>model-shop-interface</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.itheima.restkeeper</groupId>
+            <artifactId>model-basic-interface</artifactId>
+        </dependency>
+
         <!-- Dubbo Spring Cloud Starter -->
         <dependency>
             <groupId>com.alibaba.cloud</groupId>
