--- a/restkeeper-model-shop/model-shop-producer/src/main/resources/application.yml
+++ b/restkeeper-model-shop/model-shop-producer/src/main/resources/application.yml
@@ -89,6 +89,9 @@ dubbo:
   scan:
     #扫描路径
     base-packages: com.itheima.restkeeper
+  cloud:
+    #表示要订阅服务的服务名，可以配置'*'，代表订阅所有服务，不推荐使用。若需订阅多应用，使用 "," 分割。
+    subscribed-services: model-basic-producer,model-trading-producer
   registry:
     #注册中心
     address: spring-cloud://192.168.112.77
