--- a/restkeeper-model-shop/model-shop-web/src/main/resources/application.yml
+++ b/restkeeper-model-shop/model-shop-web/src/main/resources/application.yml
@@ -57,7 +57,7 @@ dubbo:
     logger: slf4j
   cloud:
     #表示要订阅服务的服务名，可以配置'*'，代表订阅所有服务，不推荐使用。若需订阅多应用，使用 "," 分割。
-    subscribed-services: model-shop-producer,model-basic-producer,model-shop-applet,model-shop-user,model-trading-producer
+    subscribed-services: model-shop-producer,model-shop-applet,model-shop-user
   scan:
     #扫描路径
     base-packages: com.itheima.restkeeper.web
