--- a/restkeeper-gateway/gateway-operator/pom.xml
+++ b/restkeeper-gateway/gateway-operator/pom.xml
@@ -9,16 +9,11 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>restkeeper-gateway-shop</artifactId>
+    <artifactId>gateway-operator</artifactId>
 
-    <name>restkeeper-gateway-shop</name>
+    <name>gateway-operator</name>
+
     <dependencies>
-        <!--鉴权服务接口-->
-        <dependency>
-            <groupId>com.itheima.restkeeper</groupId>
-            <artifactId>model-security-interface</artifactId>
-        </dependency>
-        <!--鉴权客户端【消费者】-->
         <dependency>
             <groupId>com.itheima.restkeeper</groupId>
             <artifactId>model-security-client</artifactId>
@@ -53,6 +48,11 @@
         </dependency>
 
         <dependency>
+            <groupId>com.itheima.restkeeper</groupId>
+            <artifactId>model-security-interface</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>com.alibaba.cloud</groupId>
             <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
         </dependency>
@@ -65,7 +65,7 @@
     </dependencies>
 
     <build>
-        <finalName>gateway-shop</finalName>
+        <finalName>gateway-operator</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
