--- a/restkeeper-model-basic/model-basic-producer/pom.xml
+++ b/restkeeper-model-basic/model-basic-producer/pom.xml
@@ -25,7 +25,7 @@
 
         <dependency>
             <groupId>com.itheima.restkeeper</groupId>
-            <artifactId>framework-starter-redis</artifactId>
+            <artifactId>framework-redis</artifactId>
         </dependency>
 
         <dependency>
