--- a/restkeeper-model-security/model-security-client/pom.xml
+++ b/restkeeper-model-security/model-security-client/pom.xml
@@ -57,7 +57,7 @@
 
         <dependency>
             <groupId>com.itheima.restkeeper</groupId>
-            <artifactId>framework-starter-redis</artifactId>
+            <artifactId>framework-redis</artifactId>
         </dependency>
 
     </dependencies>
