--- a/restkeeper-model-shop/model-shop-producer/pom.xml
+++ b/restkeeper-model-shop/model-shop-producer/pom.xml
@@ -43,7 +43,7 @@
 
         <dependency>
             <groupId>com.itheima.restkeeper</groupId>
-            <artifactId>framework-starter-redis</artifactId>
+            <artifactId>framework-redis</artifactId>
         </dependency>
 
         <dependency>
