--- a/restkeeper-gateway/gateway-shop/src/main/resources/bootstrap.yml
+++ b/restkeeper-gateway/gateway-shop/src/main/resources/bootstrap.yml
@@ -4,7 +4,7 @@ spring:
   #应用配置
   application:
     #应用名称
-    name: restkeeper-gateway-shop
+    name: gateway-shop
   cloud:
     nacos:
       discovery:
