--- a/restkeeper-model-security/model-security-producer/pom.xml
+++ b/restkeeper-model-security/model-security-producer/pom.xml
@@ -37,7 +37,7 @@
 
         <dependency>
             <groupId>com.itheima.restkeeper</groupId>
-            <artifactId>framework-starter-redis</artifactId>
+            <artifactId>framework-redis</artifactId>
         </dependency>
 
         <dependency>
