--- a/restkeeper-model-shop/model-shop-applet/pom.xml
+++ b/restkeeper-model-shop/model-shop-applet/pom.xml
@@ -30,7 +30,7 @@
 
         <dependency>
             <groupId>com.itheima.restkeeper</groupId>
-            <artifactId>framework-starter-redis</artifactId>
+            <artifactId>framework-redis</artifactId>
         </dependency>
 
         <dependency>
