--- a/restkeeper-model-shop/model-shop-user/pom.xml
+++ b/restkeeper-model-shop/model-shop-user/pom.xml
@@ -22,7 +22,7 @@
         
         <dependency>
             <groupId>com.itheima.restkeeper</groupId>
-            <artifactId>framework-starter-redis</artifactId>
+            <artifactId>framework-redis</artifactId>
         </dependency>
 
         <dependency>
