--- a/restkeeper-model-trading/model-trading-service/pom.xml
+++ b/restkeeper-model-trading/model-trading-service/pom.xml
@@ -44,7 +44,7 @@
 
         <dependency>
             <groupId>com.itheima.restkeeper</groupId>
-            <artifactId>framework-starter-redis</artifactId>
+            <artifactId>framework-redis</artifactId>
         </dependency>
 
         <dependency>
