--- a/restkeeper-model-basic/model-basic-job-listen/src/main/resources/application.yml
+++ b/restkeeper-model-basic/model-basic-job-listen/src/main/resources/application.yml
@@ -23,23 +23,53 @@ spring:
         bucket-name: itheima-sh-oss
         endpoint: oss-cn-shanghai.aliyuncs.com
     stream:
-      binders:
-        rabbit-log:
-          type: rabbit
-          environment:
+      rabbit:
+        bindings:
+          log-input:
+            consumer:
+              acknowledge-mode: MANUAL #签收模式
+              durable-subscription: true #是否持久化队
+              binding-routing-key: log-key
+              prefetch: 100 #默认：1,限制consumer在消费消息时，一次能同时获取的消息数量，。
+              max-concurrency: 10 # 默认：1,queue的消费者的最大数量。当前消费者数量不足以及时消费消息时, 会动态增加消费者数量, 直到到达最大数量, 即该配置的值.
+              exchange-type: direct  # 指定交换机类型
+          sms-input:
+            consumer:
+              acknowledge-mode: MANUAL #签收模式
+              durable-subscription: true #是否持久化队
+              binding-routing-key: sms-key
+              prefetch: 100 #默认：1,限制consumer在消费消息时，一次能同时获取的消息数量，。
+              max-concurrency: 10 # 默认：1,queue的消费者的最大数量。当前消费者数量不足以及时消费消息时, 会动态增加消费者数量, 直到到达最大数量, 即该配置的值.
+              exchange-type: direct  # 指定交换机类型
+      binders: #需要绑定的rabbitmq的服务信息
+        defaultRabbit:  #定义的名称，用于bidding整合
+          type: rabbit  #消息组件类型
+          environment:  #配置rabbimq连接环境
             spring:
               rabbitmq:
-                host: 192.168.112.77
-                port: 5672
-                username: admin
-                password: pass
-                virtual-host: /
+                host: 192.168.112.77   #rabbitmq 服务器的地址
+                port: 5672           #rabbitmq 服务器端口
+                username: admin       #rabbitmq 用户名
+                password: pass       #rabbitmq 密码
+                virtual-host: /       #虚拟路径
       # Binding 配置项，对应 BindingProperties Map
       bindings:
         log-input:
-          destination: log-output-01 # 目的地。这里使用 Topic
+          destination: log-exchange # 目的地。这里使用 Topic
           content-type: application/json # 内容格式。这里使用 JSON
-          group: log-listen-group-log-output-01 # 消费者分组,命名规则：组名+topic名
+          group: log-queue # 消费者分组,队列名称：destination+group,此时队列为持久化的
+          binder: defaultRabbit
+          consumer:
+            concurrency: 3 # 初始/最少/空闲时 消费者数量。默认1
+            max-attempts: 6 # 重试次数
+        sms-input:
+          destination: sms-exchange # 目的地。这里使用 Topic
+          content-type: application/json # 内容格式。这里使用 JSON
+          group: sms-queue # 消费者分组,队列名称：destination+group,此时队列为持久化的
+          binder: defaultRabbit
+          consumer:
+            concurrency: 3 # 初始/最少/空闲时 消费者数量。默认1
+            max-attempts: 6 # 重试次数
   #数据源配置
   datasource:
     druid:
@@ -83,3 +113,24 @@ mybatis-plus:
     - tab_sms_sign
     - tab_sms_template
     - undo_log
+restkeeper:
+  framework:
+    xxl-job:
+      executor:
+        # 调度中心部署跟地址 [选填]：如调度中心集群部署存在多个地址则用逗号分隔。
+        # 执行器将会使用该地址进行"执行器心跳注册"和"任务结果回调"；为空则关闭自动注册；
+        admin-addresses: http://192.168.112.77:8280/xxl-job-admin/
+        # 执行器AppName [选填]：执行器心跳注册分组依据；为空则关闭自动注册
+        app-name: model-basic-job-listen
+        # 执行器IP [选填]：默认为空表示自动获取IP，多网卡时可手动设置指定IP，
+        # 该IP不会绑定Host仅作为通讯实用；地址信息用于 "执行器注册" 和 "调度中心请求并触发任务"；
+        ip:
+        # 执行器端口号 [选填]：小于等于0则自动获取；默认端口为9999，
+        # 单机部署多个执行器时，注意要配置不同执行器端口；
+        port: 9999
+        # 执行器通讯TOKEN [选填]：非空时启用；
+        access-token:
+        # 执行器运行日志文件存储磁盘路径 [选填] ：需要对该路径拥有读写权限；为空则使用默认路径；
+        log-path: D:/logs/model-basic-job-listen/handler
+        # 执行器日志保存天数 [选填] ：值大于3时生效，启用执行器Log文件定期清理功能，否则不生效；
+        log-retention-days: -1
