--- a/restkeeper-model-basic/model-basic-producer/pom.xml
+++ b/restkeeper-model-basic/model-basic-producer/pom.xml
@@ -13,6 +13,12 @@
 
     <name>model-basic-producer</name>
     <dependencies>
+
+        <dependency>
+            <groupId>com.itheima.restkeeper</groupId>
+            <artifactId>framework-stream-rabbitmq</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>com.itheima.restkeeper</groupId>
             <artifactId>model-basic-interface</artifactId>
