--- a/restkeeper-model-security/model-security-service/src/main/resources/generrator.properties
+++ b/restkeeper-model-security/model-security-service/src/main/resources/generrator.properties
@@ -15,7 +15,7 @@ moduleName=restkeeper
 #设置表前缀，不设置则默认无前缀
 tablePrefix =tab_
 #数据库表名(此处切不可为空，如果为空，则默认读取数据库的所有表名)
-tableName=tab_enterprise,tab_resource,tab_role,tab_role_resource,tab_user,tab_user_role
+tableName=tab_customer
 #pojo的超类
 SuperEntityClass = com.itheima.restkeeper.basic.BasicPojo
 #pojo的超类公用字段
@@ -23,11 +23,11 @@ superEntityColumns = id,created_time,updated_time,sharding_id,enable_flag
 #生成的层级
 entity=true
 entity.ftl.path=/templates/entity.java
-mapper=false
+mapper=true
 mapper.ftl.path=/templates/mapper.java
-service=false
+service=true
 service.ftl.path=/templates/service.java
-serviceImp=false
+serviceImp=true
 serviceImp.ftl.path=/templates/serviceImpl.java
 controller=false
 controller.ftl.path=/templates/controller.java
