新增：客户功能

--- a/restkeeper-gateway/gateway-operator/src/main/resources/application.yml
+++ b/restkeeper-gateway/gateway-operator/src/main/resources/application.yml
@@ -14,7 +14,7 @@ spring:
       config: classpath:singleServerConfig.yaml
   security:
     ignore-url:
-      - /**
+      - /security/user/loginCode/**
       - /security/user/login
       - /doc.html
       - /security-swagger/**
