--- a/restkeeper-model-trading/model-trading-job-listen/pom.xml
+++ b/restkeeper-model-trading/model-trading-job-listen/pom.xml
@@ -41,6 +41,12 @@
         </dependency>
 
         <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
+        </dependency>
+
+
+        <dependency>
             <groupId>com.itheima.restkeeper</groupId>
             <artifactId>framework-seata</artifactId>
             <exclusions>
