--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -59,7 +59,7 @@ services:
         ipv4_address: 172.21.0.4
     depends_on:
       - nacos
-#  rabbitmq脚本
+  #rabbitmq脚本
   rabbitmq:
     image: rabbitmq:3.8.3-management
     container_name: rabbitmq
@@ -75,57 +75,6 @@ services:
     networks:
       extnetwork:
         ipv4_address: 172.21.0.5
-  #rocketmq脚本
-#  rmqnamesrv:
-#    image: foxiswho/rocketmq:4.8.0
-#    container_name: rmqnamesrv
-#    ports:
-#      - 9876:9876
-#    volumes:
-#      - ./rocketmq/rmqnamesrv/logs:/home/rocketmq/logs
-#      - ./rocketmq/rmqnamesrv/store:/home/rocketmq/store
-#    environment:
-#      JAVA_OPT_EXT: "-Duser.home=/home/rocketmq -Xms512M -Xmx512M -Xmn128m"
-#    command: ["sh","mqnamesrv"]
-#    networks:
-#      extnetwork:
-#        ipv4_address: 172.21.0.6
-#        aliases:
-#          - rmqnamesrv
-#  rmqbroker:
-#    image: foxiswho/rocketmq:4.8.0
-#    container_name: rmqbroker
-#    ports:
-#      - 10909:10909
-#      - 10911:10911
-#    volumes:
-#      - ./rocketmq/rmqbroker/logs:/home/rocketmq/logs
-#      - ./rocketmq/rmqbroker/store:/home/rocketmq/store
-#      - ./rocketmq/rmqbroker/brokerconf/broker.conf:/etc/rocketmq/broker.conf
-#    environment:
-#      JAVA_OPT_EXT: "-Duser.home=/home/rocketmq -Xms512M -Xmx512M -Xmn128m"
-#    command: ["sh","mqbroker","-c","/etc/rocketmq/broker.conf","-n","rmqnamesrv:9876","autoCreateTopicEnable=true"]
-#    networks:
-#      extnetwork:
-#        ipv4_address: 172.21.0.7
-#        aliases:
-#          - rmqbroker
-#    depends_on:
-#      - rmqnamesrv
-#  rmqconsole:
-#    image: styletang/rocketmq-console-ng
-#    container_name: rmqconsole
-#    ports:
-#      - 8180:8080
-#    environment:
-#      JAVA_OPTS: "-Drocketmq.namesrv.addr=rmqnamesrv:9876 -Dcom.rocketmq.sendMessageWithVIPChannel=false"
-#    networks:
-#      extnetwork:
-#        ipv4_address: 172.21.0.8
-#        aliases:
-#          - rmqconsole
-#    depends_on:
-#      - rmqnamesrv
   xxl-job:
     image: xuxueli/xxl-job-admin:2.1.2
     container_name: xxl-job-admin
@@ -153,22 +102,14 @@ services:
     networks:
       extnetwork:
         ipv4_address: 172.21.0.10
-  nginx:
-    container_name: nginx
-    image: nginx:1.18.0
-    restart: always
+  sentinel:
+    image: bladex/sentinel-dashboard
+    container_name: sentinel
     ports:
-      - 80:80
-    privileged: true
-    volumes:
-      - ./nginx/conf/proxy.conf:/etc/nginx/proxy.conf
-      - ./nginx/conf/nginx.conf:/etc/nginx/nginx.conf
-      - ./nginx/conf/conf.d/:/etc/nginx/conf.d/
-      - ./nginx/logs/:/etc/nginx/logs/
-      - ./nginx/home/:/home
+      - 8858:8858
     networks:
       extnetwork:
-        ipv4_address: 172.21.0.11
+        ipv4_address: 172.21.0.12
 # docker容器内网地址
 networks:
   extnetwork:
