新增：客户功能

--- a/restkeeper-gateway/gateway-shop/src/main/resources/application.yml
+++ b/restkeeper-gateway/gateway-shop/src/main/resources/application.yml
@@ -28,6 +28,7 @@ spring:
     #跨域配置
     origins:
       - http://ppsk.shop.eehp.cn:8080
+      - http://ppsk.dc.eehp.cn:1080
     #登录页指定
     login-page: /security/user/login
   cloud:
@@ -38,14 +39,13 @@ spring:
         group: SEATA_GROUP
     stream:
       rabbit:
-        bindings: #绑定声明
-          log-output: #发出队列
+        bindings:
+          log-output:
             producer:
-              #routingKeyExpression: headers.type  # 生产者配置RabbitMq的动态路由键
-              durable-subscription: true #是否持久化队列
-              exchangeType: direct  # 指定交换机类型
+              routing-key-expression: headers.type  # 生产者配置RabbitMq的动态路由键
+              exchange-type: direct  # 指定交换机类型
       binders: #需要绑定的rabbitmq的服务信息
-        defaultRabbit:  #定义的名称，用于bindings整合
+        defaultRabbit:  #定义的名称，用于bidding整合
           type: rabbit  #消息组件类型
           environment:  #配置rabbimq连接环境
             spring:
@@ -55,10 +55,10 @@ spring:
                 username: admin       #rabbitmq 用户名
                 password: pass       #rabbitmq 密码
                 virtual-host: /       #虚拟路径
-      bindings: #服务的整合处理
-        log-output: #这个是消息通道的名称
-          destination: log-exchange #exchange名称,交换模式默认是topic;把SpringCloud stream的消息输出通道绑定到RabbitMQ的exchange-logOutput交换器。
-          content-type: application/json #设置消息的类型，本次为json
+      bindings:        #服务的整合处理
+        log-output:    #这个是消息通道的名称
+          destination: log-exchange     #exchange名称,交换模式默认是topic;把SpringCloud stream的消息输出通道绑定到RabbitMQ的exchange-logOutput交换器。
+          content-type: application/json      #设置消息的类型，本次为json
           binder: defaultRabbit
     gateway:
       discovery:
@@ -129,6 +129,7 @@ spring:
             allow-credentials: true
             allowedOrigins:
               - "http://ppsk.shop.eehp.cn:8080"
+              - "http://ppsk.dc.eehp.cn:1080"
             allowedHeaders: "*"
             allowedMethods: "*"
 logging:
