--- a/restkeeper-model-basic/model-basic-job-listen/pom.xml
+++ b/restkeeper-model-basic/model-basic-job-listen/pom.xml
@@ -47,7 +47,7 @@
     </dependencies>
 
     <build>
-        <finalName>model-basic-job-listen</finalName>
+        <finalName>basic-job-listen</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
