--- a/restkeeper-model-trading/model-trading-job-listen/pom.xml
+++ b/restkeeper-model-trading/model-trading-job-listen/pom.xml
@@ -58,6 +58,21 @@
         </dependency>
 
     </dependencies>
-
+    <build>
+        <finalName>trading-job-listen</finalName>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
