升级：交易平台升级

--- a/restkeeper-model-trading/model-trading-producer/src/main/resources/application.yml
+++ b/restkeeper-model-trading/model-trading-producer/src/main/resources/application.yml
@@ -48,6 +48,7 @@ mybatis-plus:
   #忽略门店号表
   ignore-store-tables:
     - tab_trading_setting
+    - tab_pay_channel
     - undo_log
 logging:
   config: classpath:logback.xml
