升级：交易平台升级

--- a/restkeeper-model-trading/model-trading-service/src/main/resources/generrator.properties
+++ b/restkeeper-model-trading/model-trading-service/src/main/resources/generrator.properties
@@ -15,7 +15,7 @@ moduleName=restkeeper
 #设置表前缀，不设置则默认无前缀
 tablePrefix =tab_
 #数据库表名(此处切不可为空，如果为空，则默认读取数据库的所有表名)
-tableName=tab_trading,tab_pay_channel
+tableName=tab_trading,tab_pay_channel,tab_trading
 #pojo的超类
 SuperEntityClass = com.itheima.restkeeper.basic.BasicPojo
 #pojo的超类公用字段
