--- a/restkeeper-model-shop/model-shop-service/src/main/resources/generrator.properties
+++ b/restkeeper-model-shop/model-shop-service/src/main/resources/generrator.properties
@@ -15,7 +15,7 @@ moduleName=restkeeper
 #设置表前缀，不设置则默认无前缀
 tablePrefix =tab_
 #数据库表名(此处切不可为空，如果为空，则默认读取数据库的所有表名)
-tableName=tab_brand,tab_category,tab_dish,tab_dish_flavor,tab_order,tab_order_item,tab_printer,tab_printer_dish,tab_store,tab_table,tab_table_area
+tableName=tab_order
 #pojo的超类
 SuperEntityClass = com.itheima.restkeeper.basic.BasicPojo
 #pojo的超类公用字段
