--- a/restkeeper-model-shop/model-shop-user/src/main/resources/application.yml
+++ b/restkeeper-model-shop/model-shop-user/src/main/resources/application.yml
@@ -41,6 +41,7 @@ mybatis-plus:
   #忽略门店号表
   ignore-store-tables:
     - tab_user
+    - tab_customer
     - tab_role
     - tab_user_role
     - undo_log
