--- a/restkeeper-model-security/model-security-service/src/main/resources/generrator.properties
+++ b/restkeeper-model-security/model-security-service/src/main/resources/generrator.properties
@@ -1,26 +1,26 @@
-#Êı¾İ¿âµØÖ·
-url=jdbc:mysql://192.168.112.77:3306/restkeeper-security?serverTimezone=UTC&useUnicode=true&characterEncoding=utf-8&tinyInt1isBit=false
-#Êı¾İ¿âÕËºÅ
+#ï¿½ï¿½ï¿½İ¿ï¿½ï¿½Ö·
+url=jdbc:mysql://192.168.200.129:3306/restkeeper-security?serverTimezone=UTC&useUnicode=true&characterEncoding=utf-8&tinyInt1isBit=false
+#ï¿½ï¿½ï¿½İ¿ï¿½ï¿½Ëºï¿½
 userName=root
-#Êı¾İ¿âÃÜÂë
+#ï¿½ï¿½ï¿½İ¿ï¿½ï¿½ï¿½ï¿½ï¿½
 password=pass
-#´Ë´¦Îª±¾ÏîÄ¿srcËùÔÚÂ·¾¶£¨´úÂëÉú³ÉÆ÷Êä³öÂ·¾¶£©
+#ï¿½Ë´ï¿½Îªï¿½ï¿½ï¿½ï¿½Ä¿srcï¿½ï¿½ï¿½ï¿½Â·ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Â·ï¿½ï¿½ï¿½ï¿½
 projectPath=E:/restkeeper-prent/restkeeper-super/restkeeper-model-security/model-security-service
-#ÉèÖÃ×÷Õß
+#ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½
 author=Admin
-#×Ô¶¨Òå°üÂ·¾¶
+#ï¿½Ô¶ï¿½ï¿½ï¿½ï¿½Â·ï¿½ï¿½
 parent=com.itheima
-#×°´úÂëµÄÎÄ¼ş¼ĞÃû
+#×°ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ä¼ï¿½ï¿½ï¿½ï¿½ï¿½
 moduleName=restkeeper
-#ÉèÖÃ±íÇ°×º£¬²»ÉèÖÃÔòÄ¬ÈÏÎŞÇ°×º
+#ï¿½ï¿½ï¿½Ã±ï¿½Ç°×ºï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ä¬ï¿½ï¿½ï¿½ï¿½Ç°×º
 tablePrefix =tab_
-#Êı¾İ¿â±íÃû(´Ë´¦ÇĞ²»¿ÉÎª¿Õ£¬Èç¹ûÎª¿Õ£¬ÔòÄ¬ÈÏ¶ÁÈ¡Êı¾İ¿âµÄËùÓĞ±íÃû)
+#ï¿½ï¿½ï¿½İ¿ï¿½ï¿½ï¿½ï¿½(ï¿½Ë´ï¿½ï¿½Ğ²ï¿½ï¿½ï¿½Îªï¿½Õ£ï¿½ï¿½ï¿½ï¿½Îªï¿½Õ£ï¿½ï¿½ï¿½Ä¬ï¿½Ï¶ï¿½È¡ï¿½ï¿½ï¿½İ¿ï¿½ï¿½ï¿½ï¿½ï¿½Ğ±ï¿½ï¿½ï¿½)
 tableName=tab_customer
-#pojoµÄ³¬Àà
+#pojoï¿½Ä³ï¿½ï¿½ï¿½
 SuperEntityClass = com.itheima.restkeeper.basic.BasicPojo
-#pojoµÄ³¬Àà¹«ÓÃ×Ö¶Î
+#pojoï¿½Ä³ï¿½ï¿½à¹«ï¿½ï¿½ï¿½Ö¶ï¿½
 superEntityColumns = id,created_time,updated_time,sharding_id,enable_flag
-#Éú³ÉµÄ²ã¼¶
+#ï¿½ï¿½ï¿½ÉµÄ²ã¼¶
 entity=true
 entity.ftl.path=/templates/entity.java
 mapper=true
