--- a/restkeeper-framework/pom.xml
+++ b/restkeeper-framework/pom.xml
@@ -18,7 +18,7 @@
         <module>framework-web</module>
         <module>framework-jwt</module>
         <module>framework-xxl-job</module>
-        <module>framework-stream-rabbitmq</module>
+        <module>framework-stream-mq</module>
         <module>framework-sharding-jdbc</module>
     </modules>
     <modelVersion>4.0.0</modelVersion>
