--- a/restkeeper-gateway/gateway-shop/src/main/resources/application.yml
+++ b/restkeeper-gateway/gateway-shop/src/main/resources/application.yml
@@ -34,7 +34,7 @@ spring:
   cloud:
     nacos:
       discovery:
-        server-addr: 192.168.112.77:8848
+        server-addr: 192.168.200.129:8848
         namespace: public
         group: SEATA_GROUP
     stream:
@@ -50,7 +50,7 @@ spring:
           environment:  #配置rabbimq连接环境
             spring:
               rabbitmq:
-                host: 192.168.112.77   #rabbitmq 服务器的地址
+                host: 192.168.200.129   #rabbitmq 服务器的地址
                 port: 5672           #rabbitmq 服务器端口
                 username: admin       #rabbitmq 用户名
                 password: pass       #rabbitmq 密码
@@ -144,12 +144,12 @@ dubbo:
   scan:
     base-packages: com.itheima.restkeeper
   registry:
-    address: spring-cloud://192.168.112.77
+    address: spring-cloud://192.168.200.129
   protocol:
     name: dubbo
     port: 28017
     threads: 200
-    accesslog: D:/logs/gateway-shop-01.log
+    accesslog: logs/gateway-shop-01.log
 restkeeper:
   framework:
     jwt:
