--- a/restkeeper-model-basic/model-basic-job-listen/src/main/resources/bootstrap.yml
+++ b/restkeeper-model-basic/model-basic-job-listen/src/main/resources/bootstrap.yml
@@ -1,6 +1,6 @@
 spring:
   profiles:
-    active: dev
+    active: test
   #应用配置
   application:
     #应用名称
@@ -8,10 +8,10 @@ spring:
   cloud:
     nacos:
       discovery:
-        server-addr: 192.168.112.77:8848 # nacos注册中心
+        server-addr: 192.168.200.129:8848 # nacos注册中心
         group: SEATA_GROUP
       config:
-        server-addr: 192.168.112.77:8848 # nacos配置中心地址
+        server-addr: 192.168.200.129:8848 # nacos配置中心地址
         group: SEATA_GROUP
         file-extension: yml
   redis:
