--- a/restkeeper-model-trading/model-trading-producer/src/main/resources/application.yml
+++ b/restkeeper-model-trading/model-trading-producer/src/main/resources/application.yml
@@ -16,13 +16,13 @@ spring:
   datasource:
     druid:
       driver-class-name: com.mysql.jdbc.Driver
-      url: jdbc:mysql://192.168.112.77:3306/restkeeper-trading?serverTimezone=UTC&useUnicode=true&characterEncoding=utf8
+      url: jdbc:mysql://192.168.200.129:3306/restkeeper-trading?serverTimezone=UTC&useUnicode=true&characterEncoding=utf8
       username: root
       password: pass
   cloud:
     nacos:
       discovery:
-        server-addr: 192.168.112.77:8848
+        server-addr: 192.168.200.129:8848
         namespace: public
         group: SEATA_GROUP
     alibaba:
@@ -63,23 +63,25 @@ seata:
     #这里的名字与file.conf中vgroup_project_tx_group = "default"相同
     vgroup-mapping:
       project_tx_group: default
-    #这里的名字与file.conf中default.grouplist = "192.168.112.77:8091"相同
+    #这里的名字与file.conf中default.grouplist = "192.168.200.129:8091"相同
     grouplist:
-      default: 192.168.112.77:9200
+      default: 192.168.200.129:9200
   config:
     type: nacos
     nacos:
       group: SEATA_GROUP
-      server-addr: 192.168.112.77:8848
+      server-addr: 192.168.200.129:8848
       username: nacos
       password: nacos
+      namespace: a2334a2d-d74b-4bfb-ac6c-2058aa46aa8c
   registry:
     type: nacos
     nacos:
       group: SEATA_GROUP
-      server-addr: 192.168.112.77:8848
+      server-addr: 192.168.200.129:8848
       username: nacos
       password: nacos
+      namespace: a2334a2d-d74b-4bfb-ac6c-2058aa46aa8c
 dubbo:
   application:
     version: 1.0.0
@@ -87,13 +89,16 @@ dubbo:
   scan:
     base-packages: com.itheima.restkeeper
   registry:
-    address: spring-cloud://192.168.112.77
+    address: spring-cloud://192.168.200.129
   protocol:
     #指定二进制协议
     name: dubbo
     port: 27075
     threads: 200
-    accesslog: D:/logs/model-trading-producer-01.log
+    accesslog: logs/model-trading-producer-01.log
+
+  cloud:
+    subscribed-services: ''
 restkeeper:
   framework:
    #万维易源接口信息
