--- a/restkeeper-model-trading/model-trading-web/src/main/resources/application.yml
+++ b/restkeeper-model-trading/model-trading-web/src/main/resources/application.yml
@@ -12,7 +12,7 @@ spring:
   cloud:
     nacos:
       discovery:
-        server-addr: 192.168.112.77:8848
+        server-addr: 192.168.200.129:8848
         namespace: public
         group: SEATA_GROUP
 dubbo:
@@ -25,12 +25,12 @@ dubbo:
   scan:
     base-packages: com.itheima.restkeeper.web
   registry:
-    address: spring-cloud://192.168.112.77
+    address: spring-cloud://192.168.200.129
   protocol:
     name: dubbo
     port: 27076
     threads: 200
-    accesslog: D:/logs/model-trading-web-01.log
+    accesslog: logs/model-trading-web-01.log
 restkeeper:
   framework:
     swagger:
