--- a/restkeeper-model-basic/model-basic-producer/pom.xml
+++ b/restkeeper-model-basic/model-basic-producer/pom.xml
@@ -16,8 +16,10 @@
 
         <dependency>
             <groupId>com.itheima.restkeeper</groupId>
-            <artifactId>framework-stream-rabbitmq</artifactId>
+            <artifactId>framework-stream-binder-rabbitmq</artifactId>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
+
 
         <dependency>
             <groupId>com.itheima.restkeeper</groupId>
