--- a/restkeeper-model-shop/model-shop-producer/src/main/resources/application.yml
+++ b/restkeeper-model-shop/model-shop-producer/src/main/resources/application.yml
@@ -26,7 +26,7 @@ spring:
       driver-class-name: com.mysql.jdbc.Driver
       url: jdbc:mysql://124.221.88.197:3306/restkeeper-shop?serverTimezone=UTC&useUnicode=true&characterEncoding=utf8
       username: root
-      password: pass
+      password: wa201107027
 #mybatis配置
 mybatis-plus:
   # MyBaits 别名包扫描路径，通过该属性可以给包中的类注册别名
