--- a/restkeeper-model-shop/model-shop-producer/src/main/resources/singleServerConfig.yaml
+++ b/restkeeper-model-shop/model-shop-producer/src/main/resources/singleServerConfig.yaml
@@ -25,7 +25,7 @@ singleServerConfig:
   #执行失败最大次数
   failedAttempts: 3
   #密码
-  password: pass
+  password: wa201107027
   #每个连接的最大订阅数量。
   #默认值：5
   subscriptionsPerConnection: 5
